report的position每个仓位按list返回