@@ -113,8 +113,8 @@ class ITFutureCross {
             ApiPlaceOrder order1 = container.genOrder(userId1, size, 10000, symbolId, BID, GTC, MarginMode.ISOLATED);
             container.submitCommandSync(order1, CommandResultCode.SUCCESS);
             container.validateUserState(userId1, profile -> {
-                assertThat(profile.getPositions().get(symbolId).getPendingBuySize(), is(1L));
-                assertThat(profile.getPositions().get(symbolId).getMarginMode(), is(MarginMode.ISOLATED));
+                assertThat(profile.getPositions().get(symbolId).get(0).getPendingBuySize(), is(1L));
+                assertThat(profile.getPositions().get(symbolId).get(0).getMarginMode(), is(MarginMode.ISOLATED));
             });
             ApiPlaceOrder order2 = container.genOrder(userId1, size, 10000, symbolId, BID, GTC, MarginMode.CROSS);
             // 用户已有isolated 持仓，cross下单失败
@@ -128,8 +128,8 @@ class ITFutureCross {
             // 取消订单后再下cross可以成功
             container.submitCommandSync(order2, CommandResultCode.SUCCESS);
             container.validateUserState(userId1, profile -> {
-                assertThat(profile.getPositions().get(symbolId).getPendingBuySize(), is(1L));
-                assertThat(profile.getPositions().get(symbolId).getMarginMode(), is(MarginMode.CROSS));
+                assertThat(profile.getPositions().get(symbolId).get(0).getPendingBuySize(), is(1L));
+                assertThat(profile.getPositions().get(symbolId).get(0).getMarginMode(), is(MarginMode.CROSS));
             });
             // 用户已有cross 持仓，再下isolated下单失败
             container.submitCommandSync(order1, CommandResultCode.RISK_MARGIN_MODE_MISMATCH);
@@ -141,8 +141,8 @@ class ITFutureCross {
             container.submitCommandSync(order1, CommandResultCode.SUCCESS);
 
             container.validateUserState(userId1, profile -> {
-                assertThat(profile.getPositions().get(symbolId).getPendingBuySize(), is(1L));
-                assertThat(profile.getPositions().get(symbolId).getMarginMode(), is(MarginMode.ISOLATED));
+                assertThat(profile.getPositions().get(symbolId).get(0).getPendingBuySize(), is(1L));
+                assertThat(profile.getPositions().get(symbolId).get(0).getMarginMode(), is(MarginMode.ISOLATED));
             });
 
         } catch (ExecutionException e) {
@@ -177,7 +177,7 @@ class ITFutureCross {
                     .build();
             container.submitCommandSync(order1, CommandResultCode.SUCCESS);
             container.validateUserState(userId1, profile -> {
-                assertThat(profile.getPositions().get(symbolId).getMarginMode(), is(MarginMode.ISOLATED));
+                assertThat(profile.getPositions().get(symbolId).get(0).getMarginMode(), is(MarginMode.ISOLATED));
             });
         } catch (ExecutionException e) {
             throw new RuntimeException(e);
@@ -209,7 +209,7 @@ class ITFutureCross {
             container.createAskWithOrderId(takerOrderId2, userId2, 1, 10000, symbolId, MarginMode.CROSS);
             container.validateUserState(userId1, profile -> {
                 assertThat(profile.getPositions().size(), is(1));
-                assertThat(profile.getPositions().get(symbolId).getMarginMode(), is(MarginMode.CROSS));
+                assertThat(profile.getPositions().get(symbolId).get(0).getMarginMode(), is(MarginMode.CROSS));
             });
 
             // 平仓成功
@@ -225,7 +225,7 @@ class ITFutureCross {
             container.createAskWithOrderId(takerOrderId2, userId2, 1, 11000, symbolId, MarginMode.ISOLATED);
             container.validateUserState(userId1, profile -> {
                 assertThat(profile.getPositions().size(), is(1));
-                assertThat(profile.getPositions().get(symbolId).getMarginMode(), is(MarginMode.ISOLATED));
+                assertThat(profile.getPositions().get(symbolId).get(0).getMarginMode(), is(MarginMode.ISOLATED));
             });
 
         } catch (ExecutionException e) {
@@ -262,18 +262,18 @@ class ITFutureCross {
             container.createBidWithOrderId(makerOrderId3, userId1, size, price2, symbolId, MarginMode.CROSS);
 
             container.validateUserState(userId1, profile -> {
-                assertThat(profile.getPositions().get(symbolId).pendingBuyAvgPrice, is((price1 + price2) / 2));
+                assertThat(profile.getPositions().get(symbolId).get(0).pendingBuyAvgPrice, is((price1 + price2) / 2));
             });
 
             container.createAskWithOrderId(takerOrderId4, userId2, size, price2, symbolId, MarginMode.CROSS);
             container.createAskWithOrderId(takerOrderId2, userId2, size, price1, symbolId, MarginMode.CROSS);
             // 完全成交后avgPrice为0
             container.validateUserState(userId1, profile -> {
-                assertThat(profile.getPositions().get(symbolId).pendingBuyAvgPrice, is(0L));
+                assertThat(profile.getPositions().get(symbolId).get(0).pendingBuyAvgPrice, is(0L));
             });
             // 完全成交后avgPrice为0
             container.validateUserState(userId2, profile -> {
-                assertThat(profile.getPositions().get(symbolId).pendingSellAvgPrice, is(0L));
+                assertThat(profile.getPositions().get(symbolId).get(0).pendingSellAvgPrice, is(0L));
             });
 
         } catch (ExecutionException e) {
@@ -608,10 +608,10 @@ class ITFutureCross {
             container.validateUserState(userId1, profile -> {
                 assertThat(profile.getAccounts().get(quoteId), is(9840L));
                 assertThat(profile.getPositions().size(), is(1));
-                assertThat(profile.getPositions().getFirst().direction, is(PositionDirection.LONG));
-                assertThat(profile.getPositions().getFirst().quoteCurrency, is(quoteId));
-                assertThat(profile.getPositions().getFirst().openVolume, is(1L));
-                assertThat(profile.getPositions().getFirst().openPriceSum, is(10000L));
+                assertThat(profile.getPositions().getFirst().get(0).direction, is(PositionDirection.LONG));
+                assertThat(profile.getPositions().getFirst().get(0).quoteCurrency, is(quoteId));
+                assertThat(profile.getPositions().getFirst().get(0).openVolume, is(1L));
+                assertThat(profile.getPositions().getFirst().get(0).openPriceSum, is(10000L));
             });
 
         } catch (ExecutionException e) {
